--- a/src/app/country/list/list.component.html
+++ b/src/app/country/list/list.component.html
@@ -1,15 +1,15 @@
 <div [@routerTransition]>
-    <app-page-header [heading]="'Contatos'" [icon]="'fa-table'"></app-page-header>
+    <app-page-header [heading]="'Lista de Países'" [icon]="'fa-table'"></app-page-header>
 
     <div class="row">
         <div class="col col-xl-1 col-lg-1">
-            <a [routerLink]="['../cadastrar']"><button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-user"></i>
+            <a [routerLink]="['']"><button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-arrow-left"></i>
             </button></a>
         </div>
     </div>
     <div class="row" style="margin-top: 30px"></div>
     <div class="row">
-        <div class="col col-xl-12 col-lg-12">        
+        <div class="col col-md-12 col-lg-5">        
 
             <div class="card mb-12">
                 <div class="card-header">Lista de contatos</div>
@@ -17,29 +17,15 @@
                     <table class="table table-hover table-striped">
                         <thead>
                             <tr>
-                                <th>Nome</th>
-                                <th>Nascimento</th>
-                                <th>CPF</th>
-                                <th>Celular</th>
-                                <th>Email</th>
-                                <th>Ação</th>
+                                <th>Sigla</th>
+                                <th>País</th>
                             </tr>
                         </thead>
                         <tbody>
 
-                            <tr *ngFor="let contato of contatos">
-                                <td>{{contato.nome}}</td>
-                                <td>{{contato.dt_nascimento}}</td>
-                                <td>{{contato.cpf}}</td>
-                                <td>{{contato.celular}}</td>
-                                <td>{{contato.email}}</td>
-                                <td>
-                                    <div class="row">
-                                        <button type="button" class="btn bg-none btn-circle"><i class="fa fa-list"></i></button>
-                                        <button type="button" class="btn bg-none btn-circle"><i class="fa fa-edit"></i></button>
-                                        <button type="button" (click)="excluir(contato.id)" class="btn bg-none btn-circle"><i class="fa fa-times"></i></button>
-                                     </div>
-                                </td>
+                            <tr *ngFor="let country of countrys">
+                                <td>{{country.initial}}</td>
+                                <td>{{country.name}}</td>
                             </tr>
                             
                         </tbody>
