--- a/src/app/country/list/list.component.html
+++ b/src/app/country/list/list.component.html
@@ -12,13 +12,14 @@
         <div class="col col-md-12 col-lg-5">        
 
             <div class="card mb-12">
-                <div class="card-header">Lista de contatos</div>
+                <div class="card-header">Lista de Países</div>
                 <div class="card-body table-responsive">
                     <table class="table table-hover table-striped">
                         <thead>
                             <tr>
                                 <th>Sigla</th>
                                 <th>País</th>
+                                <th>BR</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -26,6 +27,7 @@
                             <tr *ngFor="let country of countrys">
                                 <td>{{country.initial}}</td>
                                 <td>{{country.name}}</td>
+                                <td>{{country.br}}</td>
                             </tr>
                             
                         </tbody>
